# ai-news-hub

./: README.md  docker-down-nuke.sh  docker-down.sh  docker-up.sh  main.py  pyproject.toml
app/: main.py
app/database/: connection.py  models.py  repoisitory.py  table_operations.py
app/scrapers/: anthropic_scraper.py  article.py  openai_scraper.py  youtube.py  youtube_scraper.py
app/services/: process_articles.py  process_video_transcript.py  runner.py
docker/: docker-compose.yml
